# learning-zephyr-rtos

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  c_cpp_properties.json  devcontainer.json  setup.sh
app/: CMakeLists.txt  prj.conf
app/src/: main.bak  main.c
ble_advertising/: CMakeLists.txt  prj.conf
ble_advertising/src/: main.c
ble_advertising_sc/: CMakeLists.txt  app.overlay  prj.conf
ble_advertising_sc/src/: main.c
ble_central_sc/: CMakeLists.txt  app.overlay  prj.conf
ble_central_sc/src/: main.c
ble_peripheral_sc/: CMakeLists.txt
ble_peripheral_sc/src/: main.c
double_uart_viewer_rtt/: CMakeLists.txt  prj.conf
double_uart_viewer_rtt/boards/: promicro_nrf52840.overlay
double_uart_viewer_rtt/src/: main.c
i2c_lis3dh/: CMakeLists.txt  prj.conf
i2c_lis3dh/src/: main.c
i2c_lis3dh_driver/: app.overlay  prj.conf
i2c_lis3dh_driver/src/: main.c
i2c_lis3dh_wake/: CMakeLists.txt  app.overlay  prj.conf
i2c_lis3dh_wake/include/: imu_driver.h
i2c_lis3dh_wake/src/: imu_driver.c  main.c
interrupt_lowpower/: CMakeLists.txt  prj.conf
modem_chat_sim7080g/: CMakeLists.txt  NOTE.md  app.overlay  prj.conf
modem_chat_sim7080g/include/: app_config.h  certificates.h  modem_driver.h
modem_chat_sim7080g/src/: certificate.h  certificates.c  main.c  modem_driver.c
modem_chat_sim7080g/src/modem/: modem_service.c  modem_service.h
modem_ppp_sim7080g/: CMakeLists.txt  app.overlay  prj.conf
modem_ppp_sim7080g/src/: main.c
modem_ppp_sim7080g_simple/: CMakeLists.txt  app.overlay  prj.conf
modem_ppp_sim7080g_simple/src/: main.c
printk/: CMakeLists.txt  prj.conf
printk/src/: main.c
state_machine/: CMakeLists.txt  prj.conf
state_machine/src/: main.c
swd_debug/: CMakeLists.txt
swd_debug/src/: main.c
uart_gps_driver/: CMakeLists.txt  prj.conf
uart_gps_driver/boards/: promicro_nrf52840.overlay
uart_gps_driver/include/: app_config.h  gps_protocol.h
uart_gps_driver/src/: main.c
uart_viewer/: CMakeLists.txt  prj.conf
uart_viewer/src/: main.c
uart_viewer_gps/: CMakeLists.txt  prj.conf
uart_viewer_gps/boards/: promicro_nrf52840.overlay
uart_viewer_gps/include/: gps_driver.h
uart_viewer_gps/src/: main.c
usbc_cdc_dual_uart_debug/: CMakeLists.txt  app.overlay  prj.conf
usbc_cdc_dual_uart_debug/src/: main.c
